--- a/习题库/第一章 入门基本姿势.md
+++ b/习题库/第一章 入门基本姿势.md
@@ -50,6 +50,8 @@ D、水中“流线型姿势”【正确】
 （判断题）闭气抱膝的时候，大腿是否需要贴紧（正确）
 # 第九组：
 # 第十组：
+2017141020杨海丽
+（判断题）水中正确持浮板有利于我们尽快学会游泳。（正确）
 # 第十一组：
 2017141111雷蕊铭
 （判断题）陆上单手持浮板姿势是入门基本姿势之一吗【正确】
